# EchoLVFM

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  trainer.py
.github/workflows/: tests.yml
benchmarks/: README.md  bench_training.py  conftest.py  run.py  time_inference.py
ckpts/: README.txt
ckpts/echolvfm_h=1/: inference_timing.txt
ckpts/echolvfm_h=1/.hydra/: config.yaml  overrides.yaml
ckpts/echolvfm_h=2/: inference_timing.txt
ckpts/echolvfm_h=2/.hydra/: config.yaml  overrides.yaml
ckpts/linear/: inference_timing.txt
ckpts/linear/.hydra/: config.yaml  overrides.yaml
configs/flow_train/: flow_train.yaml
configs/flow_train/model/: jvp_max_unet.yaml  unet.yaml
configs/flow_train/paths/: local.yaml
data_preprocessing/: area_length_ef.py  convert_camus.py
dataset/: __init__.py  echodataset.py
docs/: hub_model_card.md
evaluation/: functions.py
sample_data/CAMUS_Latents_4f4/: CAMUS_Scaling_4f4.pt  metadata.csv  patient0082_4CH.pt  patient0106_4CH.pt  patient0119_4CH.pt  patient0121_2CH.pt  patient0126_2CH.pt  patient0310_4CH.pt  patient0313_4CH.pt  patient0314_2CH.pt  patient0326_4CH.pt  patient0422_4CH.pt
scripts/: run_tests.sh  upload_to_hub.py
src/: custom_callbacks.py  custom_loss.py  model.py
src/flows/: __init__.py  linear_flow.py  rmm_flow.py
tests/: README.md  test_flows.py  test_losses.py  test_model.py
utils/: evaluation.py  hub.py  latent_utils.py  train.py  video_utils.py
vae/: convert_to_latent_dataset.py  normalise_latent_dataset.py
videos/: README.md
